--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @lessons.each do |lesson| %>
-    <li> <%= lesson.name %> </li>
+    <li> <%= link_to lesson.name, lesson_path(lesson) %> </li>
   <% end %>
 </ul>
 
