--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -2,3 +2,12 @@
 <p>
   <%= @lesson.content %>
 </p>
+
+<p>
+  <%= link_to "Edit", edit_lesson_path(@lesson) %>
+</p>
+
+
+<p>
+  <%= link_to "Back to Lessons", lessons_path %>
+</p>
