--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -7,6 +7,10 @@
   <%= link_to "Edit", edit_lesson_path(@lesson) %>
 </p>
 
+<p>
+  <%= link_to "Delete", lesson_path(@lesson), method: "delete" %>
+</p>
+
 
 <p>
   <%= link_to "Back to Lessons", lessons_path %>
